--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@
     /* margin: auto; */
     padding: 10px;
   }
+
+  .res {
+    width: min(1000px, 80vw);
+    margin-left: auto;
+    margin-right: auto;
+    height: calc(min(1000px, 80vw)*1.3);
+  }
   
   .container {
     border-radius: 5px;
